--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,14 @@ body {
 	padding-left: 6px;
 	color: #888;
 }
+
+#settings {
+	position: absolute;
+	right: 20px;
+	bottom: 20px;
+	background-color: #444;
+	border-radius: 5px;
+	border-width: 0px;
+	color: #aaa;
+	padding: 5px;
+}
