--- a/settings.css
+++ b/settings.css
@@ -5,14 +5,11 @@ li {
 input {
 	background-color: transparent;
 	font-size: 16px;
+	width: calc(100% - 32px);
 }
 
 .right {
 	float: right;
-}
-
-li button object {
-	fill: red;
 }
 
 li:hover > button {
