--- a/src/styles.css
+++ b/src/styles.css
@@ -7,12 +7,25 @@ Shared styles
 	src: url('assets/fonts/roboto/Roboto-Medium.ttf');
 }
 
-* {
-	font-family: 'roboto';
-}
-
 body {
 	background-color: #333;
+	margin: 0;
+	overflow: hidden;
+}
+
+main {
+	display: flex;
+	width: 200%;
+	/*transform: translate(0px, 0px);*/
+}
+
+section {
+	display: flex;
+	width: 50%;
+}
+
+input, button, span {
+	font-family: 'roboto';
 }
 
 ul {
@@ -62,14 +75,14 @@ Search styles
 ************/
 
 #search {
-	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
 #query {
 	padding-left: 12px;
-	width: calc(100% - 12px);
+	/*width: calc(100% - 12px);*/
+	margin-top: 12px;
 	height: 50px;
 	font-size: 30px;
 	border-width: 0;
