--- a/src/styles.css
+++ b/src/styles.css
@@ -129,7 +129,20 @@ Search styles
 	font-size: 16px;
 }
 
-#settings_button {
+.results_center_container {
+	display: flex;
+	width: 100%;
+	height: 100%;
+	justify-content: space-between;
+	align-items: flex-end;
+}
+
+.results_center_container::before {
+	content: '';
+	width: 24px;
+}
+
+#settings_gear {
 	width: 24px;
 	height: 24px;
 	border-width: 0;
@@ -138,30 +151,12 @@ Search styles
 	padding: 0;
 	margin-bottom: 12px;
 	transition: transform 0.4s;
+	will-change: transform;
 }
 
-#settings_button:hover {
+#settings_gear:hover {
 	transform: rotate(90deg);
 }
-
-.results_center_container {
-	display: flex;
-	width: 100%;
-	height: 100%;
-	justify-content: space-between;
-}
-
-.settings_button_container {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-}
-
-.size_settings_button {
-	width: 24px;
-	height: 24px;
-}
-
 
 
 
@@ -221,5 +216,3 @@ Settings styles
 	justify-content: space-between;
 	align-items: center;
 }
-
-.settings_buttons_container 1
